@@ -130,7 +130,7 @@ function stringField( s : unbounded_string; delimiter : character; f : natural )
 return unbounded_string;
 -- return the fth field delimited by delimiter
 
-function stringCSVField( s : unbounded_string; delimiter : character;
+function stringCSVField( s1 : unbounded_string; delimiter : character;
 f : natural ) return unbounded_string;
 -- return the fth field delimited by delimiter (typically a comma) but
 -- allow the delimiter to be escaped by double quote marks
